--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Emmanuel Uko. Course landing page with information about the student and web development resources.">
+    <meta name="description" content="Explore Emmanuel Uko’s WDD 131 BYU–Idaho projects, featuring web design fundamentals, resources, and personal insights.">
     <meta name="author" content="Emmanuel Uko">
-    <title>WDD 131 – Dynamic Web Fundamentals – Emmanuel Uko</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>WDD 131 - Dynamic Web Fundamentals - Emmanuel Uko</title>    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/base.css">
