--- a/week02/temples.html
+++ b/week02/temples.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Temple Album - WDD 131</title>
+    <meta name="description" content="A responsive temple album page showcasing beautiful temples from around the world">
     <meta name="author" content="Emmanuel Uko">
-    <meta name="description" content="WDD 131 | Temple Album showcasing selected temples around the world. Browse temple images and learn more about locations.">
-    <title>Temple Album</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css" media="(min-width: 768px)">
+    <script src="scripts/temples.js" defer></script>
 </head>
 <body>
     <header>
