--- a/week02/temples.html
+++ b/week02/temples.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temple Album - WDD 131</title>
-    <meta name="description" content="A responsive temple album page showcasing beautiful temples from around the world">
+    <meta name="description" content="BYUI WDD131 | A responsive temple album page showcasing beautiful temples from around the world">
     <meta name="author" content="Emmanuel Uko">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
