Reduced Temple Name

--- a/temples.html
+++ b/temples.html
@@ -56,11 +56,11 @@
                 <figcaption>Accra Ghana Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/birmingham_alabama_temple_lds.jpg" alt="Birmingham Alabama Temple">
+                <img src="images/birmingham_temple_lds.jpg" alt="Birmingham Alabama Temple">
                 <figcaption>Birmingham Alabama Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/cape_town_africa_temple_rendering.jpg" alt="Cape Town South Africa Temple">
+                <img src="images/cape_town_temple.jpg" alt="Cape Town South Africa Temple">
                 <figcaption>Cape Town South Africa Temple</figcaption>
             </figure>
             <figure>
@@ -97,3 +97,5 @@
 </html>
 
 <!--ONE SEC!!-->
+<!--LADIES & GENTLEMEN, IT WORKED! (((YAY!!!)))-->
+<!--Had Created a Week02 Folder, had to move everything to the root folder.-->
