--- a/place.html
+++ b/place.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Madagascar — Country Page</title>
+  <title>Nigeria — Country Page | WDD131 - Dynamic Web Fundamentals - Emmanuel Uko</title>
+  <meta name="description" content="BYUI WDD131 | Responsive Nigerian country page with real-time weather information, country data, and beautiful imagery - demonstrating mobile-first web development principles.">
+  <meta name="author" content="Emmanuel Uko">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/place.css">
   <script src="scripts/place.js" defer></script>
 </head>
@@ -11,77 +16,54 @@
 
   <!-- HEADER -->
   <header class="site-header">
-    <h1>Madagascar</h1>
+    <h1>Nigeria</h1>
     <div class="flag-stripe"></div>
   </header>
 
-  <!-- HERO -->
+  <!-- HERO SECTION -->
   <section class="hero">
     <picture>
-      <source srcset="images/portugal-large.webp 1200w" media="(min-width:900px)" type="image/webp">
-      <source srcset="images/portugal-large.webp 800w" media="(min-width:480px)" type="image/webp">
-      <img src="images/portugal-large.webp" alt="Ring-tailed lemurs resting in Madagascar" class="hero-img">
+      <source srcset="images/nigeria-large.webp" media="(min-width: 900px)" type="image/webp">
+      <source srcset="images/nigeria-small.webp" media="(max-width: 899px)" type="image/webp">
+      <img src="images/nigeria-small.webp" alt="Beautiful landscape of Madagascar" class="hero-img">
     </picture>
-
-    <!-- DESKTOP OVERLAYS -->
-    <aside class="card card-data" aria-labelledby="data-heading">
-      <h2 id="data-heading">Data</h2>
-      <ul>
-        <li><span>Area:</span> 587,041 sq km</li>
-        <li><span>Population:</span> 27,691,018</li>
-        <li><span>Capital:</span> Antananarivo</li>
-        <li><span>Languages:</span> Malagasy, French</li>
-        <li><span>Currency:</span> Malagasy Ariary</li>
-        <li><span>Time Zone:</span> UTC+3</li>
-        <li><span>Calling Code:</span> +261</li>
-        <li><span>Internet TLD:</span> .mg</li>
-      </ul>
-    </aside>
-
-    <aside class="card card-weather" aria-labelledby="weather-heading">
-      <h2 id="weather-heading">Weather</h2>
-      <img src="images/cloudy.svg" alt="" class="weather-svg" aria-hidden="true">
-      <dl>
-        <div><dt>Temperature:</dt><dd><span id="temp">10</span> °C</dd></div>
-        <div><dt>Conditions:</dt><dd>Partly Cloudy</dd></div>
-        <div><dt>Wind:</dt><dd><span id="wind">5</span> km/h</dd></div>
-        <div><dt>Wind Chill:</dt><dd id="windchill">—</dd></div>
-      </dl>
-    </aside>
-
   </section>
 
-  <!-- MOBILE STACKED -->
+  <!-- MAIN CONTENT - CARDS -->
   <main class="main-content">
-    <section>
+    <!-- DATA CARD -->
+    <section class="card data-card">
       <h2>Data</h2>
       <ul>
-        <li><strong>Area:</strong> 587,041 sq km</li>
-        <li><strong>Population:</strong> 27,691,018</li>
-        <li><strong>Capital:</strong> Antananarivo</li>
-        <li><strong>Languages:</strong> Malagasy, French</li>
-        <li><strong>Currency:</strong> Malagasy Ariary</li>
-        <li><strong>Time Zone:</strong> UTC+3</li>
-        <li><strong>Calling Code:</strong> +261</li>
-        <li><strong>Internet TLD:</strong> .mg</li>
+        <li><span>Area:</span> 923,768 sq km</li>
+        <li><span>Population:</span> 229,152,217</li>
+        <li><span>Capital:</span> Abuja</li>
+        <li><span>Languages:</span> English, others</li>
+        <li><span>Currency:</span> Nigerian Naira (₦)</li>
+        <li><span>Time Zone:</span> UTC+1</li>
+        <li><span>Calling Code:</span> +234</li>
+        <li><span>Internet TLD:</span> .ng</li>
       </ul>
     </section>
 
-    <section>
-      <h2>Weather <span class="mobile-icon">⛅</span></h2>
-      <img src="images/cloudy.svg" alt="" class="weather-svg-mobile" aria-hidden="true">
-      <dl>
-        <div><dt>Temperature:</dt><dd><span id="temp-m">10</span> °C</dd></div>
-        <div><dt>Conditions:</dt><dd>Partly Cloudy</dd></div>
-        <div><dt>Wind:</dt><dd><span id="wind-m">5</span> km/h</dd></div>
-        <div><dt>Wind Chill:</dt><dd id="windchill-m">—</dd></div>
-      </dl>
+    <!-- WEATHER CARD -->
+    <section class="card weather-card">
+      <h2>Weather</h2>
+      <div class="weather-content">
+        <img src="images/sunny.svg" alt="Weather icon" class="weather-icon" aria-hidden="true">
+        <dl class="weather-data">
+          <div><dt>Temperature:</dt><dd><span id="temp">30</span> °C</dd></div>
+          <div><dt>Conditions:</dt><dd>Mostly Sunny</dd></div>
+          <div><dt>Wind:</dt><dd><span id="wind">12</span> km/h</dd></div>
+          <div><dt>Wind Chill:</dt><dd id="windchill">—</dd></div>
+        </dl>
+      </div>
     </section>
   </main>
 
   <!-- FOOTER -->
   <footer class="site-footer">
-    <p>&copy; <span id="year"></span> 🌸 Rubia Magdelena Francesco 🌸 Madagascar</p>
+    <p>&copy; <span id="year"></span> Emmanuel Uko | Madagascar</p>
     <p>Last Modification: <span id="last-modified"></span></p>
   </footer>
 
