--- a/place.html
+++ b/place.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nigeria — Country Page | WDD131 - Dynamic Web Fundamentals - Emmanuel Uko</title>
-  <meta name="description" content="BYUI WDD131 | Responsive Nigerian country page with real-time weather information, country data, and beautiful imagery - demonstrating mobile-first web development principles.">
+  <meta name="description" content="BYUI WDD131 | Responsive Nigerian country page with real-time weather information, country data, and beautiful imagery.">
   <meta name="author" content="Emmanuel Uko">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
