Minor Country Name changes

--- a/place.html
+++ b/place.html
@@ -25,7 +25,7 @@
     <picture>
       <source srcset="images/nigeria-large.webp" media="(min-width: 900px)" type="image/webp">
       <source srcset="images/nigeria-small.webp" media="(max-width: 899px)" type="image/webp">
-      <img src="images/nigeria-small.webp" alt="Beautiful landscape of Madagascar" class="hero-img">
+      <img src="images/nigeria-small.webp" alt="Beautiful landscape of Nigeria" class="hero-img">
     </picture>
   </section>
 
@@ -63,7 +63,7 @@
 
   <!-- FOOTER -->
   <footer class="site-footer">
-    <p>&copy; <span id="year"></span> Emmanuel Uko | Madagascar</p>
+    <p>&copy; <span id="year"></span> Emmanuel Uko | Nigeria</p>
     <p>Last Modification: <span id="last-modified"></span></p>
   </footer>
 
