--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -1,54 +1,51 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filtered Temples</title>
-    <meta name="description" content="This page dynamically displays temples based on user filters.">
+    <title>Temple Album - WDD 131 - Dynamic Web Fundamentals - Emmanuel Uko</title>
+    <meta name="description" content="BYUI WDD131 | A responsive temple album page showcasing beautiful temples from around the world">
     <meta name="author" content="Emmanuel Uko">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <!-- Link to new CSS files -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Source+Sans+Pro:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/filtered-temples.css">
-    <link rel="stylesheet" href="styles/filtered-temples-large.css" media="screen and (min-width: 768px)">
-    <!-- Link to new JS file -->
+    <link rel="stylesheet" href="styles/filtered-temples-large.css" media="(min-width: 768px)">
     <script src="scripts/filtered-temples.js" defer></script>
 </head>
 <body>
-    <!-- <header>
-        <h1>Temple Album</h1>
-        <nav class="navigation">
-            <a href="#" class="filter" data-filter="home">Home</a>
-            <a href="#" class="filter" data-filter="old">Old</a>
-            <a href="#" class="filter" data-filter="new">New</a>
-            <a href="#" class="filter" data-filter="large">Large</a>
-            <a href="#" class="filter" data-filter="small">Small</a>
-        </nav>
-        <button class="hamburger" aria-label="Open menu">&#9776;</button>
-    </header> -->
     <header>
-        <div class="header-container">
+        <div class="header-content">
             <h1>Temple Album</h1>
-            <button class="hamburger" aria-label="Open menu">&#9776;</button>
-            <nav class="navigation">
-                <a href="#" class="filter" data-filter="home">Home</a>
-                <a href="#" class="filter" data-filter="old">Old</a>
-                <a href="#" class="filter" data-filter="new">New</a>
-                <a href="#" class="filter" data-filter="large">Large</a>
-                <a href="#" class="filter" data-filter="small">Small</a>
+            <button id="hamburger-btn" class="hamburger" aria-label="Toggle navigation menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav id="main-nav">
+                <ul>
+                    <li><a href="#" data-filter="all">Home</a></li>
+                    <li><a href="#" data-filter="old">Old</a></li>
+                    <li><a href="#" data-filter="new">New</a></li>
+                    <li><a href="#" data-filter="large">Large</a></li>
+                    <li><a href="#" data-filter="small">Small</a></li>
+                </ul>
             </nav>
         </div>
     </header>
-    <!-- main -->
 
     <main>
-        <!-- <h2></h2> -->
-        <div class="temple-cards-container" id="templeCards"></div>
+        <h2>Temples Around the World</h2>
+        <div id="album-grid" class="album-grid">
+            <!-- Temple cards will be dynamically generated here -->
+        </div>
     </main>
-    <footer>    
-        <p>&copy;<span id="currentYear"></span> Emmanuel Uko | Cross River State, Nigeria</p>
-        <p id="lastModified"></p>
+
+    <footer>
+        <p>&copy; <span id="current-year"></span> Temple Album. All rights reserved.</p>
+        <p>Last Modified: <span id="last-modified"></span></p>
     </footer>
+
+    <script src="scripts/filtered-temples.js"></script>
 </body>
 </html>
