--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="current-year"></span> Temple Album. All rights reserved.</p>
+        <p>&copy; <span id="current-year"></span> Emmanuel Uko.</p>
         <p>Last Modified: <span id="last-modified"></span></p>
     </footer>
 
