--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PNW Hiking Collective - Website Plan</title>
+    <meta name="description" content="Project Plan for PNW Hiking Collective, detailing site name, purpose, target audience scenarios, color schema, typography, and wireframe designs.">
+    <meta name="author" content="Emmanuel Uko">
+    <title>WDD131 | PNW Hiking Collective - Website Plan</title>
     <link rel="stylesheet" href="/project/styles/siteplan.css">
 </head>
 <body>
