--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Project Plan for PNW Hiking Collective, detailing site name, purpose, target audience scenarios, color schema, typography, and wireframe designs.">
     <meta name="author" content="Emmanuel Uko">
     <title>WDD131 | PNW Hiking Collective - Website Plan</title>
-    <link rel="stylesheet" href="/styles/siteplan.css">
+    <link rel="stylesheet" href="styles/siteplan.css">
 </head>
 <body>
     <header>
