Working on the Radio Input

--- a/form.html
+++ b/form.html
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label for="rating">Overall Rating</label>
                 <div class="rating-container">
-                    <input type="radio" id="star5" name="rating" value="5" required>
+                    <input type="radio" id="star5" name="rating" value="5">
                     <label for="star5">★</label>
                     <input type="radio" id="star4" name="rating" value="4">
                     <label for="star4">★</label>
