--- a/form.html
+++ b/form.html
@@ -28,13 +28,13 @@
                 <div class="rating-container">
                     <input type="radio" id="star5" name="rating" value="5" required>
                     <label for="star5">★</label>
-                    <input type="radio" id="star4" name="rating" value="4">
+                    <input type="radio" id="star4" name="rating" value="4" required>
                     <label for="star4">★</label>
-                    <input type="radio" id="star3" name="rating" value="3">
+                    <input type="radio" id="star3" name="rating" value="3" required>
                     <label for="star3">★</label>
-                    <input type="radio" id="star2" name="rating" value="2">
+                    <input type="radio" id="star2" name="rating" value="2" required>
                     <label for="star2">★</label>
-                    <input type="radio" id="star1" name="rating" value="1">
+                    <input type="radio" id="star1" name="rating" value="1" required>
                     <label for="star1">★</label>
                 </div>
             </div>
